--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
-    "build": "[my-framework] build --output public"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
