--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node dist/server.js",
-    "dev": "NODE_ENV=development ts-node src/server.ts",
+    "serve": " node dist/server.js",
+    "dev": " ts-node src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
