--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "serve": " node dist/server.js",
-    "dev": " ts-node src/server.ts",
+    "start": "node ts-node dist/server.js",
+    "dev": "node ts-node src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
