--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": " ts-node src/server.ts",
+    "dev": "npx ts-node src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
