--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
-    "tslib": "^2.8.0"
+    "tslib": "^2.8.0",
+    "@types/express": "^4.17.21"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.6.1",
     "nodemon": "^3.1.7",
